Add details about new case terms to language reference

--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -102,7 +102,7 @@ The <HisyeoWord is='bi'/> particle precedes this noun phrase.
 
 This role is used for noun phrases that represent the manner or material of the
 predicate. In English, this is represented by the use of words with the "-ly"
-suffix (adverbs) or some senses of the words "by" and "with".
+suffix (adverbs) or some senses of the words "by" and "with". In linguistics, this might be seen as a kind of adverbial case but the word "adverbial" is ill-fitting to the grammar of Hîsyêô so the term **methodological** case is being used instead.
 
 :::info Thematic Relations
 
@@ -130,7 +130,8 @@ The <HisyeoWord is='tô'/> particle precedes this noun phrase.
 
 This role is used for noun phrases that represent some entity that was used to
 carry out the action. In English, this represents some of the senses of the
-words "with", "using", "by", and "via".
+words "with", "using", "by", and "via". In linguistics, this is known as the
+instrumental case.
 
 When used with the negatitive particle <HisyeoWord is='yôk'/>, it means that the
 marked noun phrase is either excluded from being the means or instrument of the
@@ -144,7 +145,8 @@ The <HisyeoWord is='hoî'/> particle precedes this noun phrase.
 
 This role is used for noun phrases that represent where or when the action
 occurs. In English, this represents some of the senses of the words "in", "at",
-and "on".
+and "on". In linguistics, this might be called either a **locative** or
+**adessive** case.
 
 The counterpart of this particle is <HisyeoWord is='lon'/> for distance and
 duration. Unlike the <HisyeoWord is='lon'/> particle, when you provide an amount
@@ -163,7 +165,8 @@ The <HisyeoWord is='mût'/> particle precedes this noun phrase.
 This role is used for noun phrases that represent where the action is directed
 towards. In English, this represents some of the senses of the words "to",
 "into", and "towards". Any time you might need an **indrect object** or
-**recipient**, you can use this preposition to describe that constituent.
+**recipient**, you can use this preposition to describe that constituent. In
+linguistics, this is known as the **dative** case.
 
 :::info Reciprocity
 
@@ -222,7 +225,8 @@ The <HisyeoWord is='oxon'/> particle precedes this noun phrase.
 
 This role is used for noun phrases that represent for whose benefit the action occurs or
 the reason for the action. In English, this represents some of the senses of the
-word "for".
+word "for". In linguistics, this is sometime referred to as the **causal-final**
+case.
 
 :::info The many faces of the English "for"
 
@@ -400,7 +404,7 @@ The <HisyeoWord is='ofek'/> particle precedes this noun phrase.
 This role is used for noun phrases that represent a fellow actor that is also
 engaged in the same action as the subject. However, the NP is not considered a
 subject of the sentence. In English, this represents some of the senses of the
-word "with".
+word "with". In linguistics, this would be seen as the **comitative** case.
 
 When used with the negatitive particle <HisyeoWord is='yôk'/>, it means that the
 marked noun phrase is either excluded from participating in the committed
@@ -442,10 +446,11 @@ this represents some of the senses of the word "regardless".
 
 The <HisyeoWord is='dên'/> particle precedes this noun phrase.
 
-This role is used for noun phrases that either represent a special kind of goal/agent for
-verbs that indicates an opposing agent for verbs that indicate an action that is
-*oppositional* (where both sides are engaging in an opposing action). In
-English, this represents some of the senses of the word "against".
+This role is used for noun phrases that either represent a special kind of
+goal/agent for verbs that indicates an opposing agent for verbs that indicate an
+action that is *oppositional* (where both sides are engaging in an opposing
+action). In English, this represents some of the senses of the word "against".
+In linguistis, this is sometimes referred to as the **oppositive** case.
 
 <HisyeoTabs>
   <p>ni li tûu mêdûson hôn xe oûtô bi xîmu tô woyû dên bono woyû.&emsp;<em>"It is hard work to sail against the wind."</em></p>
@@ -464,7 +469,8 @@ The <HisyeoWord is='oldis'/> particle precedes this noun phrase.
 This role is used for noun phrases that represent proof or an information source that the
 specified action is known or believed to have occurred, is occurring, or will
 occur. In English, this represents some of the senses of the phrases "or so",
-"per", and "according to". 
+"per", and "according to". In linguistis, this is referred to as an
+**evidential** case.
 
 <HisyeoTabs>
   <p>hoî môtô ilik onô û nîo li sî tônkô môtô oldis fos dîzel kôto.&emsp;<em>He was burned in the fire or so they say.</em></p>
@@ -484,7 +490,8 @@ This role is used for noun phrases that represent the time or space that the act
 occurs within. This role is related to the location/time role but instead of
 describing a moment or point in time/space, this noun phrase represents a period
 or length of time/space. In English, this represents some of the
-senses of the word "for" or "until".
+senses of the word "for" or "until". In linguistis, this is known as a
+**durative** case.
 
 <HisyeoTabs>
   <p>noyo kôî dêko lon yoûtî ônî kut cênbô yê mônbili.&emsp;<em>"I can see for kilometres"</em></p>
@@ -539,22 +546,24 @@ duration or distance that is something other than the marked noun phrase.
 
 ### Intermediate
 
-The <HisyeoWord is='gitno'/> particle precedes this noun phrase.
+The <HisyeoWord is='gitno'/> particle precedes this noun phrase. It has a unique
+role that, in linguistic terms, it can represent an **inessive** case ("in"); a
+combination of **illative** ("into") and **elative** ("out of") to indicate a kind of perfective journey; a kind of **terminative** case that specifies two limits, an upper and lower bounds, on an axis of time or space ("from...to") by using a conjunction. Due to the variety of senses of this case, the name **intermediative** case has been selected instead.
 
-This role is used for a noun phrase that represents either:
+In other words, this role is used for a noun phrase that represents either:
 - an entity that the action or state is in the *midst* of,
-- an entity that the action or state *was* in the midst of but is now on the other
-  side, or
-- a conjunction of two noun phrases that represent two boundaries in time or space that the
-  action occurs *between*.
+- an entity that the action or state *was* in the midst of but is now on the
+  other side, or
+- a conjunction of two noun phrases that represent two boundaries in time or
+  space that the action or state occurs *between*.
 
-In English, this represents some senses of the word "between" or "through".
+In English, this represents some senses of the words "in", "through", or "between".
 
 <HisyeoTabs>
   <p>noyo kôî mokon wutun hôfezî xe gitno bîek wutun.&emsp;<em>"I could eat a hamburger."</em></p>
-  <p>nûs kûu tuluti gitno tohilôk pûmi onô oxon xe bucono wokût.&emsp;<em>"We should go through the mountains to save time."</em></p>
+  <p>nûs kûu oûtô gitno tohilôk pûmi onô oxon xe bucono wokût cî.&emsp;<em>"We should drive through the mountains to save time."</em></p>
   <p>nîmû kôî dêko oûtô onô gitno kûmun obokî zonûbî onô ko.&emsp;<em>"Can you see the car through the south window?"</em></p>
-  <p>gitno nîmû ûn noyo û hîskûnco in kôson Hîsyêô li xôn môî&emsp;<em>"Between you and me, Hîsyêô is the best conlang."</em></p>
+  <p>hôn fos gitno nîmû ûn noyo, û hîskûnco in kôson Hîsyêô li xôn môî&emsp;<em>"Between you and me, Hîsyêô is the best conlang."</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yôk'/>, it means that the
@@ -570,7 +579,10 @@ This role is used for a NP that represents something that the action or state of
 the predicate resembles or is a likeness of. It can also be used to introduce a
 [simile](https://en.wikipedia.org/wiki/Simile). In English, this represents some
 of the senses of the words "like" and "as". When used with a subordinate clause,
-it can also represent the English phrase "as if".
+it can also represent the English phrase "as if". In linguistics, this might be
+thought of as a kind of essive case. However, there is some concern that this
+case term accurately reflects the functionality in Hîsyêô. So, the term
+**similative** case wwas selected instead.
 
 <HisyeoTabs>
   <p>xoînbo dêko û loi misli siskin loi.&emsp;<em>"He looks like his brother."</em></p>
