Fix up noun and religion pages

--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -121,6 +121,17 @@ projects (the "investment"). To follow Tîengûun is not to pray for wealth, but
 to engage in the hard, rewarding work of collective planning and resource
 management for the good of all.
 
+#### kontol yê sôlû et Tîengûun
+
+<HisyeoTabs>
+    <p>ônî hobîyô: ¿zik li mutyu onô?&emsp;<em>Facilitator: Who is the center?</em></p>
+    <p>môî: wutun onô li mutyu onô.&emsp;<em>All: The circle is the center.</em></p>
+    <p>ônî hobîyô: ¿zik yûnyoû kon hûkun?&emsp;<em>Facilitator: Who holds the power?</em></p>
+    <p>môî: zûngô onô fos môtsilê.&emsp;<em>All: The hands that are woven.</em></p>
+    <p>ônî hobîyô: ¿zik li môtîfô nûs?&emsp;<em>Facilitator: What is our purpose?</em></p>
+    <p>môî: xe môtsilê môî doî bêsu mût bolce sunbûlno.&emsp;<em>All: To weave all different threads into the perfect fabric.</em></p>
+</HisyeoTabs>
+
 ### Unonsî
 <small>(from the Akan diety, Anansi)</small>
 <HisyeoTabs>
@@ -286,12 +297,11 @@ sterile garden where nothing ever died or was out of place. Dimîtu’s rebellio
 was to introduce *Symbiosis* and *Decay*. They coaxed the first seed to sprout,
 die, and become soil for the next, creating a messy, chaotic, and vibrant cycle.
 This interdependence—the bee and the flower, the wolf and the elk—was anathema
-to the Law's singularity of being. Dimîtu teaches that humanity is not above
-nature, but a part of it. They guide sapient beings in permaculture, in
-sustainable land use, and in understanding that a healthy community is a diverse
-ecosystem. To be influenced by a Shard is to see land as property to be owned;
-to walk with Dimîtu is to see it as an ecosystem to be respected and
-collaborated with.
+to the Law's singularity of being. Dimîtu teaches that humanity is a part of
+nature. They guide sapient beings in permaculture, in sustainable land use, and
+in understanding that a healthy community is a diverse ecosystem. To be
+influenced by a Shard is to see land as property to be owned; to walk with
+Dimîtu is to see it as an ecosystem to be respected and collaborated with.
 
 <HisyeoTabs>
     <p>oûdî dî lôzîc gos; û lôzîc gos dî tolên gos.&emsp;<em>The seed becomes the shoot, the shoot becomes the stalk.</em></p>
@@ -382,7 +392,7 @@ Wicnû, the God of Balance *(from the Hindu diety, विष्णु Vishnu).*
 
 **Symbols:** 💎, ⚖️, ☯️
 
-**Domains:** Conflict resolution, transformative justice, mediation, truth and
+**Domains:** Conflict resolution, transformative justice, truth and
 reconciliation, ethics.
 
 **Appearance:** Wicnû is depicted as a quiet, intensely focused figure who sits at
@@ -397,12 +407,12 @@ the impact created not just the Shards (the impulse to dominate), but also
 Echoes (the pain, trauma, and misunderstanding that resulted from the violence
 of the Shattering). Wicnû was the first to realize that these Echoes would cause
 sapient beings to harm one another, mistaking the Echo of the First Law's
-violence for their own or another's malice. Wicnû's gift was not punishment, but
-the *Process*. The painstaking, patient act of bringing harmed and harmer
-together to see the full spectrum of the conflict and to collaboratively find a
-path to healing the rupture in the community's fabric. To engage with Wicnû is
-to have the courage to face those you have harmed, or who have harmed you, and
-to build justice together.
+violence for their own or another's malice. Wicnû's gift was *Mediation*. The
+painstaking, patient act of bringing harmed and harmer together to see the full
+spectrum of the conflict and to collaboratively find a path to healing the
+rupture in the community's fabric. To engage with Wicnû is to have the courage
+to face those you have harmed, or who have harmed you, and to build justice
+together.
 
 <HisyeoTabs>
     <p>mût noyo kûu mônîso yogô kobût lôc xe hoî gûêyû noyo.&emsp;<em>Show me the shard in my own eye.</em></p>
@@ -470,8 +480,8 @@ lucky coincidence that saves a project, and the unexpected storm that forces a
 community to build stronger shelters.
 
 **Myth of the Shattering:** Hûlicîn was the very first anomaly. They were the
-initial, inexplicable Friction within the perfect machine of The First Law that
-allowed the other nine consciousnesses to spark. They are not intentionally
+initial, inexplicable **Friction** within the perfect machine of The First Law
+that allowed the other nine consciousnesses to spark. They are not intentionally
 "good" or "bad"; they are simply an agent of change. Hûlicîn wanders the world,
 and their footfalls disrupt patterns. They might topple a carefully planned
 Tîengûun budget with an unexpected shortage, forcing a more innovative solution.
@@ -498,7 +508,12 @@ Practitioners of the religion have a special place in their home for personal
 spiritual activities. This can include meditation, chants, prayer, singing,
 reading scripture, and more. They perform this activity once or twice a day.
 Usually after waking up, mid-day, after coming home from work or before bed.
-Practitioners can direct these activities towards any, all, or some of the gods. 
+Practitioners can direct these activities towards any, all, or some of the gods.
+
+Additionaly, chants and prayers are said before, during and after group
+activities depending on a multitude of different scenarios. For example, a
+prayer to Wicnû during a heated argument or a chant to Hûlicîn and Bostet before
+heading out on a family adventure.
 
 ## Month Names
 
@@ -519,7 +534,7 @@ celeberating the Great Weave and then the final month is for planning.
     <p>wuto Bostet&emsp;<em>September</em></p>
     <p>wuto Wicnû&emsp;<em>October</em></p>
     <p>wuto Lexetko&emsp;<em>November (lit. Weave Month)</em></p>
-    <p>wuto Yôcno&emsp;<em>December (lit. Planning Month)</em></p>
+    <p>wuto Yôcno&emsp;<em>December (lit. Plan Month)</em></p>
 </HisyeoTabs>
 
 ## Holidays
