--- a/docs/language/word_types/nouns.mdx
+++ b/docs/language/word_types/nouns.mdx
@@ -34,7 +34,8 @@ During causative sentences, a NP with this role represents the *causer*. During
 non-causative sentences, a NP with this role will be the **agent** or
 **experiencer** of the action or state. Additionally during non-causative
 sentences, the marked noun phrase is making the choice to commit the act or
-experience the state of the predicate of their own free will. 
+experience the state of the predicate of their own free will. In linguistics
+this case is known as the **agentive** case.
 
 When used with the negatitive particle <HisyeoWord is='yôk'/>, it means that the
 marked noun phrase is either excluded from being the subject of the committed
@@ -46,12 +47,13 @@ than the marked noun phrase.
 The <HisyeoWord is='ôlê'/> particle precedes this noun phrase.
 
 During causative sentences, a NP with this role will represent the *causee*.
-During non-causative sentences, an NP with this role will be the agent or
+During non-causative sentences, a NP with this role will be the agent or
 experiencer of the action. Additionally during non-causative sentences, the
 marked noun phrase is **not** making the choice to commit the act of their own
 free will. Either they are bound/forced to do so or they do not have the
 wherewithal to make a conscious choice on the matter and are acting out of some
-basic instinst.
+basic instinst. In linguistics, this case is sometimes referred to as the
+**causal-agentive** case.
 
 When used with the negatitive particle <HisyeoWord is='yôk'/> it has the
 equivalent semantic interpretation as the voluntary subject particle <HisyeoWord is='û'/>.
@@ -131,7 +133,7 @@ The <HisyeoWord is='tô'/> particle precedes this noun phrase.
 This role is used for noun phrases that represent some entity that was used to
 carry out the action. In English, this represents some of the senses of the
 words "with", "using", "by", and "via". In linguistics, this is known as the
-instrumental case.
+**instrumental** case.
 
 When used with the negatitive particle <HisyeoWord is='yôk'/>, it means that the
 marked noun phrase is either excluded from being the means or instrument of the
@@ -193,7 +195,7 @@ The <HisyeoWord is='sûn'/> particle precedes this noun phrase.
 
 This role is used for noun phrases that represent where the action originated. In
 English, this represents nearly all of the senses of the word "from" (except for
-differentiation and causation).
+differentiation and causation). In linguistics, this is sometimes referred to as the **ablative** case.
 
 <HisyeoTabs>
   <p>noyo dôstoc lîbû in lufono sûn siskin moskûl noyo.&emsp;<em>I got a letter from my brother.</em></p>
